enable native access for desktop Skiko